<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page1">

    <TextView
        android:id="@+id/chooseNationalityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="121dp"
        android:text="@string/_1_choose_your_nationality"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/_1_choose_your_nationality"
        app:layout_constraintEnd_toEndOf="@+id/chooseNationalityText"
        app:layout_constraintStart_toStartOf="@+id/chooseNationalityText"
        app:layout_constraintTop_toBottomOf="@+id/chooseNationalityText" />

    <RadioGroup
        android:id="@+id/ageRangeRadioGroup"
        android:layout_width="181dp"
        android:layout_height="271dp"
        android:layout_marginTop="91dp"
        android:checkedButton="@+id/radioButtonUnder18"
        app:layout_constraintEnd_toEndOf="@+id/countrySpinner"
        app:layout_constraintStart_toStartOf="@+id/countrySpinner"
        app:layout_constraintTop_toBottomOf="@+id/countrySpinner">

        <TextView
            android:id="@+id/chooseAgeHeaderText"
            android:layout_width="168dp"
            android:layout_height="19dp"
            android:text="@string/_2_choose_your_age_range" />

        <RadioButton
            android:id="@+id/radioButtonUnder18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/under_18" />

        <RadioButton
            android:id="@+id/radioButton18to30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_18_30" />

        <RadioButton
            android:id="@+id/radioButton31to50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_31_50" />

        <RadioButton
            android:id="@+id/radioButton51to65"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_51_65" />

        <RadioButton
            android:id="@+id/radioButtonAbove65"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/above_65" />
    </RadioGroup>

    <Button
        android:id="@+id/nextToPage2Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="49dp"
        android:text="NEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>